--- a/School'sOut.vcxproj
+++ b/School'sOut.vcxproj
@@ -19,49 +19,49 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\collidedState.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\collision.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\combatState.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\constants.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\enemy.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\entity.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\obstacle.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\searchingState.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\spawner.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\state.h" />
+    <ClInclude Include="collidedState.h" />
+    <ClInclude Include="collision.h" />
+    <ClInclude Include="combatState.h" />
+    <ClInclude Include="constants.h" />
+    <ClInclude Include="enemy.h" />
+    <ClInclude Include="entity.h" />
+    <ClInclude Include="obstacle.h" />
+    <ClInclude Include="searchingState.h" />
+    <ClInclude Include="spawner.h" />
+    <ClInclude Include="state.h" />
     <ClInclude Include="gui.h" />
     <ClInclude Include="entityCollection.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\game.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\gameError.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\graphics.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\image.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\input.h" />
+    <ClInclude Include="game.h" />
+    <ClInclude Include="gameError.h" />
+    <ClInclude Include="graphics.h" />
+    <ClInclude Include="image.h" />
+    <ClInclude Include="input.h" />
     <ClInclude Include="player.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\projectile.h" />
+    <ClInclude Include="projectile.h" />
     <ClInclude Include="schoolsOut.h" />
-    <ClInclude Include="..\..\School%27sOut\School%27sOut\textureManager.h" />
+    <ClInclude Include="textureManager.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\collidedState.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\collision.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\combatState.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\enemy.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\entity.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\entityCollection.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\game.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\graphics.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\obstacle.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\projectile.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\searchingState.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\spawner.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\state.cpp" />
+    <ClCompile Include="collidedState.cpp" />
+    <ClCompile Include="collision.cpp" />
+    <ClCompile Include="combatState.cpp" />
+    <ClCompile Include="enemy.cpp" />
+    <ClCompile Include="entity.cpp" />
+    <ClCompile Include="entityCollection.cpp" />
+    <ClCompile Include="game.cpp" />
+    <ClCompile Include="graphics.cpp" />
+    <ClCompile Include="obstacle.cpp" />
+    <ClCompile Include="projectile.cpp" />
+    <ClCompile Include="searchingState.cpp" />
+    <ClCompile Include="spawner.cpp" />
+    <ClCompile Include="state.cpp" />
     <ClCompile Include="gui.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\image.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\input.cpp" />
+    <ClCompile Include="image.cpp" />
+    <ClCompile Include="input.cpp" />
     <ClCompile Include="player.cpp" />
     <ClCompile Include="schoolsOut.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\textureManager.cpp" />
-    <ClCompile Include="..\..\School%27sOut\School%27sOut\winmain.cpp" />
+    <ClCompile Include="textureManager.cpp" />
+    <ClCompile Include="winmain.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
